[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/collisions/InteractArea.gd" type="Script" id=1]

[node name="InteractArea" type="Area2D"]
collision_layer = 64
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )

[node name="HintPosition" type="Position2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_InteractArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractArea_body_exited"]
